--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/selector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="#FF00FFDD"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -19,11 +20,11 @@
         android:id="@+id/map"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#FFFFFF00"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/selector">
-    </FrameLayout>
+        app:layout_constraintBottom_toTopOf="@id/selector"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
