--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -10,70 +10,71 @@
         android:id="@+id/grid1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
-        app:layout_constraintBottom_toTopOf="@id/grid3"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:background="#00FFDFFF"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/grid2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
-        app:srcCompat="@drawable/ic_building2" />
+        app:srcCompat="@drawable/ic_building1" />
 
     <ImageView
         android:id="@+id/grid2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/grid1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/grid4"
         android:background="#00FFFFFF"
-        app:layout_constraintWidth_default="percent"
+        app:layout_constraintEnd_toEndOf="@+id/grid4"
         app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/grid1"
+        app:layout_constraintTop_toTopOf="@+id/grid1"
+        app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.5" />
+        app:srcCompat="@drawable/ic_building2" />
 
     <ImageView
         android:id="@+id/grid3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/grid4"
-        app:layout_constraintTop_toBottomOf="@id/grid1"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:background="#00FFFFFF"
-        app:layout_constraintWidth_default="percent"
+        app:layout_constraintEnd_toEndOf="@+id/grid1"
         app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toStartOf="@+id/grid1"
+        app:layout_constraintTop_toBottomOf="@+id/grid1"
+        app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.5" />
+        app:srcCompat="@drawable/ic_building3" />
 
     <ImageView
         android:id="@+id/grid4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/grid1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grid2"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:background="#00FFFFFF"
-        app:layout_constraintWidth_default="percent"
+        app:layout_constraintBottom_toBottomOf="@+id/grid3"
         app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toEndOf="@+id/grid3"
+        app:layout_constraintTop_toBottomOf="@+id/grid2"
+        app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.5" />
+        app:srcCompat="@drawable/ic_building4" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/grid4"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/grid1"
+        app:layout_constraintRight_toRightOf="@id/grid4"
+        app:layout_constraintTop_toTopOf="@id/grid1"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5" />
 
