--- a/app/src/main/res/layout/list_selection.xml
+++ b/app/src/main/res/layout/list_selection.xml
@@ -12,6 +12,7 @@
     </ImageView>
 
     <TextView
+        android:id="@+id/imageTitle"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginLeft="8dp"
