--- a/app/src/main/res/layout/list_selection.xml
+++ b/app/src/main/res/layout/list_selection.xml
@@ -3,21 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="48dp"
-        android:layout_height="48dp">
-    </ImageView>
+        android:layout_height="48dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="16dp"></ImageView>
 
     <TextView
         android:id="@+id/imageTitle"
-        android:layout_width="8dp"
-        android:layout_height="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
-    </TextView>
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:textAlignment="center"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/image"
+        app:layout_constraintStart_toStartOf="@+id/image"
+        app:layout_constraintTop_toBottomOf="@+id/image"></TextView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
