--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -9,23 +9,26 @@
         android:id="@+id/northWest"
         android:layout_height="0dp"
         android:layout_width="0dp"
+        android:layout_margin="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintHeight_percent="0.5" />
+
     <ImageView
         android:id="@+id/northEast"
-        android:layout_height="0dp"
         android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/northWest"
-        app:layout_constraintWidth_default="percent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.5" />
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintLeft_toRightOf="@id/northWest"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.5" />
+
     <ImageView
         android:id="@+id/southEast"
         android:layout_height="0dp"
